infra/prod/kgateway/http-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http
  namespace: kgateway
spec:
  gatewayClassName: kgateway
  addresses:
    - type: IPAddress
      value: 192.168.200.20
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-terminate
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-hyvel-certificate-secret
          - kind: Secret
            name: wildcard-ho-hyvel-certificate-secret
